# unicodebrailleinput

./: .gitignore  .pre-commit-config.yaml  README.md  appveyor.yml  buildVars.py  pyproject.toml  readme.md  readme.mdwn  ruff.toml  sconstruct
.github/workflows/: automaticRelease.yaml  build_addon.yml  manualRelease.yaml
addon/GlobalPlugins/unicodeBrailleInput/: __init__.py  interface.py
addon/doc/ar/: readme.md
addon/doc/bg/: readme.md
addon/doc/da/: readme.md
addon/doc/de/: readme.md
addon/doc/es/: readme.md
addon/doc/fi/: readme.md
addon/doc/fr/: readme.md
addon/doc/gl/: readme.md
addon/doc/hr/: readme.md
addon/doc/hu/: readme.md
addon/doc/it/: readme.md
addon/doc/ja/: readme.md
addon/doc/ne/: readme.md
addon/doc/nl/: readme.md
addon/doc/pl/: readme.md
addon/doc/pt_BR/: readme.md
addon/doc/pt_PT/: readme.md
addon/doc/ro/: readme.md
addon/doc/ru/: readme.md
addon/doc/sk/: readme.md
addon/doc/sl/: readme.md
addon/doc/tr/: readme.md
addon/doc/zh_CN/: readme.md
addon/globalPlugins/unicodeBrailleInput/: __init__.py  interface.py
addon/locale/an/LC_MESSAGES/: nvda.po
addon/locale/ar/LC_MESSAGES/: nvda.po
addon/locale/bg/LC_MESSAGES/: nvda.po
addon/locale/da/LC_MESSAGES/: nvda.po
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/de_CH/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/es_CO/LC_MESSAGES/: nvda.po
addon/locale/fa/LC_MESSAGES/: nvda.po
addon/locale/fi/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/gl/LC_MESSAGES/: nvda.po
addon/locale/he/LC_MESSAGES/: nvda.po
addon/locale/hr/LC_MESSAGES/: nvda.po
addon/locale/hu/LC_MESSAGES/: nvda.po
addon/locale/it/LC_MESSAGES/: nvda.po
addon/locale/ja/LC_MESSAGES/: nvda.po
addon/locale/kn/LC_MESSAGES/: nvda.po
addon/locale/ne/LC_MESSAGES/: nvda.po
addon/locale/nl/LC_MESSAGES/: nvda.po
addon/locale/pl/LC_MESSAGES/: nvda.po
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
addon/locale/pt_PT/LC_MESSAGES/: nvda.po
addon/locale/ro/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/sk/LC_MESSAGES/: nvda.po
addon/locale/sl/LC_MESSAGES/: nvda.po
addon/locale/sr/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/zh_CN/LC_MESSAGES/: nvda.po
