[project]
name = "unicodebrailleinput"
description = "Displays a text field to type numeric braille (e.g. 1345-1236-145-1) and converts it into unicode braille characters."
maintainers = [
{name = "Mesar Hameed", email = "mhameed@src.gnome.org"},
		{name = "Patrick Zajda", email = "patrick@zajda.fr"},
	{name = "Leonard de Ruijter", email = "alderuijter@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "copying.txt"}
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/leonardder/unicodeBrailleInput"
Issues = "https://github.com/leonardder/unicodeBrailleInput/issues"

[tool.ruff]
fix = true
line-length = 110
builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]
src = ["addon"]

exclude = [
	".git",
	"__pycache__",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]
logger-objects = ["logHandler.log"]
select = [
	"A",  # flake8-builtins
	"ARG",  # flake8-unused-arguments 
	"B",  # flake8-bugbear
	"C90", # mccabe
	"E",  # pycodestyle Error
	"F",  # Pyflakes
	"FIX",  # flake8-fixme
	"I",  # isort
	"INT",  # flake8-gettext 
	"UP",  # pyupgrade
	"W",  # pycodestyle Warning
]
